syntax = "proto3";

package rode.v1alpha1;

option go_package = "github.com/rode/rode/proto/v1alpha1";

import "google/protobuf/timestamp.proto";

message EvaluatePolicyRequest {
  string policy = 1;
  string resourceURI = 2;
}

message EvaluatePolicyResponse {
  bool pass = 1;
  bool changed = 2;
  repeated EvaluatePolicyResult result = 3;
  repeated string explanation = 4;
}

message EvaluatePolicyResult {
  bool pass = 1;
  google.protobuf.Timestamp created = 2;
  repeated EvaluatePolicyViolation violations = 3;
}

message EvaluatePolicyViolation {
  string id = 1;
  string name = 2;
  string description = 3;
  string message = 4;
  string link = 5;
  bool pass = 6;
}
